2010-09-29 [michael]	3.4.0cvs9

	* configure.ac
	* src/clamav_plugin_gtk.c
	    - Forgot to add AC_SYS_LARGEFILE to configure.ac
	    - Fixed a bug which prevented proper initialization
	      of configuration type

2010-09-29 [michael]	3.4.0cvs8

	* libclamd/clamd-plugin.c
	* libclamd/clamd-plugin.h
	    - Added support for scan an stream of data
	      using the command INSTREAM. INSTREAM is
	      the only way to have a file scanned on
	      a remote host.

2010-09-28 [michael]	3.4.0cvs7

	* libclamd/clamd-plugin.c
	* libclamd/clamd-plugin.h
	* src/clamav_plugin.c
	* src/clamav_plugin.h
	* src/clamav_plugin_gtk.c
	    - Make configuration user configurable
	    - Fix a bug which could cause an endless loop

2010-09-27 [michael]	3.4.0cvs6

	* Makefile.in
	    - Missing file


2010-09-27 [michael]	3.4.0cvs5

	* COPYING
	* src/clamav_plugin.c
	* src/clamav_plugin.h
	* src/clamav_plugin_gtk.c
	    - Changed license from GPLv2+ to GPLv3+
	    - Changed copyright from 2003-2008 to 2003-2010


2010-09-26 [michael]	3.4.0cvs4

	* libclamd/clamd-plugin.c
	    - Added clamav version info to init phase
	    - Prifixed clamav commands according to recommendation
	    - Defined all used clamav commands as static const


2010-09-26 [michael]	3.4.0cvs3

	* autogen.sh
	* libclamd/Makefile.am
	* libclamd/Makefile.in
	* libclamd/clamd-plugin.c
	* po/POTFILES.in
	* po/clamd.pot
	* po/en_GB.po
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/it.po
	* src/clamav_plugin.c
	* src/clamav_plugin_gtk.c
	    Hardening the library. Using alertpanel to show
	    info about found viruses. Added library to po.

2010-09-25 [michael]	3.4.0cvs2

	* AUTHORS
	* COPYING
	* ChangeLog
	* INSTALL
	* Makefile.am
	* NEWS
	* README
	* autogen.sh
	* commitHelper
	* configure.ac
	* libclamd/Makefile.am
	* libclamd/Makefile.in
	* libclamd/clamd-plugin.c
	* libclamd/clamd-plugin.h
	* po/ChangeLog
	* po/Makefile.in.in
	* po/Makevars
	* po/POTFILES.in
	* po/clamd.pot
	* po/en_GB.po
	* po/es.po
	* po/fi.po
	* po/hu.po